--- a/index.html
+++ b/index.html
@@ -358,57 +358,66 @@
               <div class="col-7">
                 <p>Over the course of time I have done many small projects which can easily be accessed in 
                   <a class="myproject-a" href="https://github.com/blackwakhu"> github page.</a> Some of the projects I have done include: 
-<!--                   <ul >
-                    <li> 
-                        <a class="myproject-a" href="#port">Portfolio website</a>
-                        </li>
-                    <li> 
-                        <a class="myproject-a" href="#python-phonebooke">Python phonebook using mongodb</a>
-                        </li>
-                    <li> 
-                        <a class="myproject-a" href="#cpp-blackjack">C++ Black jack</a>
-                        </li>
-                    <li> 
-                        <a class="myproject-a" href="#cunit">C unit converter</a>
-                        </li>
-                    <li> 
-                        <a class="myproject-a" href="#dictionary">Python dictionary </a>
-                        </li>
-                    <li> 
-                        <a class="myproject-a" href="#phpstudent">Php student registration </a>
-                        </li>
-                    <li> 
-                        <a class="myproject-a" href="#pythoncalculator">Python calculator</a>
-                        </li>
-                    <li> 
-                        <a class="myproject-a" href="#javalib">Java library program </a>
-                        </li>
-                    <li> 
-                        <a class="myproject-a" href="#datascience">Data science in python</a>
-                        </li>
-                  </ul> -->
                 </p>
                 <div>
-                  <dl>
-                    <dt>Coffee</dt>
-                    <dd>- black hot drink</dd>
-                    <dt>Milk</dt>
-                    <dd>- white cold drink</dd>
-                    <dt>Coffee</dt>
-                    <dd>- black hot drink</dd>
-                    <dt>Milk</dt>
-                    <dd>- white cold drink</dd>
-                    <dt>Coffee</dt>
-                    <dd>- black hot drink</dd>
-                    <dt>Milk</dt>
-                    <dd>- white cold drink</dd>
-                    <dt>Coffee</dt>
-                    <dd>- black hot drink</dd>
-                    <dt>Milk</dt>
-                    <dd>- white cold drink</dd>
-                    <dt>Coffee</dt>
-                    <dd>- black hot drink</dd>
-                  </dl>
+                  <div>
+                    <div>
+                      <a class="myproject-a" href="#port">Portfolio website</a>
+                    </div>
+                    <div></div>
+                  </div>
+                  <div>
+                    <div>
+                      <a class="myproject-a" href="#python-phonebooke">Python phonebook using mongodb</a>
+                    </div>
+                    <div></div>
+                  </div>
+                  <div>
+                    <div>
+                      <a class="myproject-a" href="#cpp-blackjack">C++ Black jack</a>
+                    </div>
+                    <div></div>
+                  </div>
+                  <div>
+                    <div>
+                      <a class="myproject-a" href="#cunit">C unit converter</a>
+                    </div>
+                    <div></div>
+                  </div>
+                  <div>
+                    <div>
+                       <a class="myproject-a" href="#dictionary">Python dictionary </a>
+                    </div>
+                    <div></div>
+                  </div>
+                  <div>
+                    <div>
+                      <a class="myproject-a" href="#phpstudent">Php student registration </a>
+                    </div>
+                    <div></div>
+                  </div>
+                  <div>
+                    <div>
+                      <a class="myproject-a" href="#pythoncalculator">Python calculator</a>
+                    </div>
+                    <div></div>
+                  </div>
+                  <div>
+                    <div>
+                      <a class="myproject-a" href="#javalib">Java library program </a>
+                    </div>
+                    <div></div>
+                  </div>
+                  <div>
+                    <div>
+                      <a class="myproject-a" href="#datascience">Data science in python</a>
+                    </div>
+                    <div></div>
+                  </div>
+                  <div>
+                    <div></div>
+                    <div></div>
+                  </div>
                 </div>
               </div>
             </div>
