--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       width: 100%;
       display: flex;
     }
+    .project-outer-container{
+      border: outer;
+    }
   </style>
 </head>
 <body>
@@ -360,7 +363,7 @@
                   <a class="myproject-a" href="https://github.com/blackwakhu"> github page.</a> Some of the projects I have done include: 
                 </p>
                 <div>
-                  <div>
+                  <div class="project-outer-container">
                     <div>
                       <a class="myproject-a" href="#port">Portfolio website</a>
                     </div>
@@ -432,7 +435,7 @@
                       </div>
                     </div>
                   </div>
-                  <div>
+                  <div class="">
                     <div>
                        <a class="myproject-a" href="#dictionary">Python dictionary </a>
                     </div>
@@ -533,15 +536,6 @@
           </div>
         </div>
         <div class="second-bg">
-<!--            -->
-<!--            -->
-<!--            -->
-<!--            -->
-<!--            -->
-<!--             -->
-<!--            -->
-<!--            -->
-<!--            -->
         </div>
       </div>
     </div>
