--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                       </div>
                     </div>
                   </div>
-                  <div>
+                  <div class="project-outer-container">
                     <div>
                       <a class="myproject-a" href="#python-phonebooke">Python phonebook using mongodb</a>
                     </div>
@@ -400,7 +400,7 @@
                       </div>
                     </div>
                   </div>
-                  <div>
+                  <div class="project-outer-container">
                     <div>
                       <a class="myproject-a" href="#cpp-blackjack">C++ Black jack</a>
                     </div>
@@ -416,7 +416,7 @@
                       </div>
                     </div>
                   </div>
-                  <div>
+                  <div class="project-outer-container">
                     <div>
                       <a class="myproject-a" href="#cunit">C unit converter</a>
                     </div>
@@ -438,7 +438,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="">
+                  <div class="project-outer-container">
                     <div>
                        <a class="myproject-a" href="#dictionary">Python dictionary </a>
                     </div>
@@ -453,7 +453,7 @@
                       </div>
                     </div>
                   </div>
-                  <div>
+                  <div class="project-outer-container">
                     <div>
                       <a class="myproject-a" href="#phpstudent">Php student registration </a>
                     </div>
@@ -468,7 +468,7 @@
                       </div>
                     </div>
                   </div>
-                  <div>
+                  <div class="project-outer-container">
                     <div>
                       <a class="myproject-a" href="#pythoncalculator">Python calculator</a>
                     </div>
@@ -483,7 +483,7 @@
                       </div>
                     </div>
                   </div>
-                  <div>
+                  <div class="project-outer-container">
                     <div>
                       <a class="myproject-a" href="#javalib">Java library program </a>
                     </div>
@@ -498,7 +498,7 @@
                       </div>
                     </div>
                   </div>
-                  <div>
+                  <div class="project-outer-container">
                     <div>
                       <a class="myproject-a" href="#datascience">Data science in python</a>
                     </div>
