--- a/index.html
+++ b/index.html
@@ -367,10 +367,10 @@
                 </p>
                 <div>
                   <div class="project-outer-container">
-                    <div>
-                      <a class="myproject-a" href="#port">Portfolio website</a>
+                    <div id="project-portfolio-btn" class="project-headline">
+                      <a class="myproject-a">Portfolio website</a>
                     </div>
-                    <div class="row">
+                    <div class="row project-data" id="project-portfolio-data">
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="port">This portfolio website</h1>
@@ -385,10 +385,10 @@
                     </div>
                   </div>
                   <div class="project-outer-container">
-                    <div>
-                      <a class="myproject-a" href="#python-phonebooke">Python phonebook using mongodb</a>
+                    <div id="project-phonebook-btn" class="project-headline">
+                      <a class="myproject-a">Python phonebook using mongodb</a>
                     </div>
-                    <div class="row">
+                    <div class="row project-data" id="project-phonebook-data">
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="python-phonebooke"> Python phonebook app </h1>
@@ -401,10 +401,10 @@
                     </div>
                   </div>
                   <div class="project-outer-container">
-                    <div>
-                      <a class="myproject-a" href="#cpp-blackjack">C++ Black jack</a>
+                    <div id="project-blackjack-btn" class="project-headline">
+                      <a class="myproject-a">C++ Black jack</a>
                     </div>
-                    <div class="row">
+                    <div class="row project-data" id="project-blackjack-data">
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="cpp-blackjack">C++ Black jack </h1>
@@ -417,10 +417,10 @@
                     </div>
                   </div>
                   <div class="project-outer-container">
-                    <div>
-                      <a class="myproject-a" href="#cunit">C unit converter</a>
+                    <div id="project-cunit-btn" class="project-headline">
+                      <a class="myproject-a">C unit converter</a>
                     </div>
-                    <div class="row">
+                    <div class="row project-data" id="project-cunit-data">
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="cunit">C unit converter </h1>
@@ -439,10 +439,10 @@
                     </div>
                   </div>
                   <div class="project-outer-container">
-                    <div>
-                       <a class="myproject-a" href="#dictionary">Python dictionary </a>
+                    <div id="project-dictionary-btn" class="project-headline">
+                       <a class="myproject-a">Python dictionary </a>
                     </div>
-                    <div class="row">
+                    <div class="row project-data" id="project-dictionary-data">
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="dictionary">Python dictionary </h1>
@@ -454,10 +454,10 @@
                     </div>
                   </div>
                   <div class="project-outer-container">
-                    <div>
-                      <a class="myproject-a" href="#phpstudent">Php student registration </a>
+                    <div id="project-student-btn" class="project-headline">
+                      <a class="myproject-a">Php student registration </a>
                     </div>
-                    <div class="row">
+                    <div class="row project-data" id="project-student-data">
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="phpstudent"> Php student registration </h1>
@@ -469,10 +469,10 @@
                     </div>
                   </div>
                   <div class="project-outer-container">
-                    <div>
-                      <a class="myproject-a" href="#pythoncalculator">Python calculator</a>
+                    <div id="project-calculator-btn" class="project-headline">
+                      <a class="myproject-a">Python calculator</a>
                     </div>
-                    <div class="row">
+                    <div class="row project-data" id="project-calculator-data">
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="pythoncalculator"> Python calculator</h1>
@@ -484,10 +484,10 @@
                     </div>
                   </div>
                   <div class="project-outer-container">
-                    <div>
-                      <a class="myproject-a" href="#javalib">Java library program </a>
+                    <div id="project-library-btn" class="project-headline">
+                      <a class="myproject-a">Java library program </a>
                     </div>
-                    <div class="row">
+                    <div class="row project-data" id="project-library-data">
                       <div class="col3"></div>
                       <div class="col-7-">
                         <h1 class="display-5" id="javalib"> Java library program </h1>
@@ -499,10 +499,10 @@
                     </div>
                   </div>
                   <div class="project-outer-container">
-                    <div>
-                      <a class="myproject-a" href="#datascience">Data science in python</a>
+                    <div id="project-dscience-btn" class="project-headline">
+                      <a class="myproject-a">Data science in python</a>
                     </div>
-                    <div class="row">
+                    <div class="row project-data" id="project-dscience-data">
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="datascience"> Data science in python </h1>
