--- a/index.html
+++ b/index.html
@@ -15,15 +15,8 @@
   <title>Derrick Shibero Wakhu Portfolio</title>
   <link rel="stylesheet" href="css/styles.css" />
   <style>
-    #table-skills{
-      width: 100%;
-      display: flex;
-    }
-    .project-outer-container{
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        width: 80%;
-        border-radius: 5px;
+    .project-data{
+      visibility: hidden;
     }
   </style>
 </head>
