--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <title>Derrick Shibero Wakhu Portfolio</title>
   <link rel="stylesheet" href="css/styles.css" />
   <style>
-    .project-data{
-      visibility: hidden;
-    }
+    
   </style>
 </head>
 <body>
@@ -363,7 +361,7 @@
                     <div id="project-portfolio-btn" class="project-headline">
                       <a class="myproject-a">Portfolio website</a>
                     </div>
-                    <div class="row project-data" id="project-portfolio-data">
+                    <div class="row project-data" id="project-portfolio-data" hidden>
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="port">This portfolio website</h1>
@@ -381,7 +379,7 @@
                     <div id="project-phonebook-btn" class="project-headline">
                       <a class="myproject-a">Python phonebook using mongodb</a>
                     </div>
-                    <div class="row project-data" id="project-phonebook-data">
+                    <div class="row project-data" id="project-phonebook-data" hidden>
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="python-phonebooke"> Python phonebook app </h1>
@@ -397,7 +395,7 @@
                     <div id="project-blackjack-btn" class="project-headline">
                       <a class="myproject-a">C++ Black jack</a>
                     </div>
-                    <div class="row project-data" id="project-blackjack-data">
+                    <div class="row project-data" id="project-blackjack-data" hidden>
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="cpp-blackjack">C++ Black jack </h1>
@@ -413,7 +411,7 @@
                     <div id="project-cunit-btn" class="project-headline">
                       <a class="myproject-a">C unit converter</a>
                     </div>
-                    <div class="row project-data" id="project-cunit-data">
+                    <div class="row project-data" id="project-cunit-data" hidden>
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="cunit">C unit converter </h1>
@@ -435,7 +433,7 @@
                     <div id="project-dictionary-btn" class="project-headline">
                        <a class="myproject-a">Python dictionary </a>
                     </div>
-                    <div class="row project-data" id="project-dictionary-data">
+                    <div class="row project-data" id="project-dictionary-data" hidden>
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="dictionary">Python dictionary </h1>
@@ -450,7 +448,7 @@
                     <div id="project-student-btn" class="project-headline">
                       <a class="myproject-a">Php student registration </a>
                     </div>
-                    <div class="row project-data" id="project-student-data">
+                    <div class="row project-data" id="project-student-data" hidden>
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="phpstudent"> Php student registration </h1>
@@ -465,7 +463,7 @@
                     <div id="project-calculator-btn" class="project-headline">
                       <a class="myproject-a">Python calculator</a>
                     </div>
-                    <div class="row project-data" id="project-calculator-data">
+                    <div class="row project-data" id="project-calculator-data" hidden>
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="pythoncalculator"> Python calculator</h1>
@@ -480,7 +478,7 @@
                     <div id="project-library-btn" class="project-headline">
                       <a class="myproject-a">Java library program </a>
                     </div>
-                    <div class="row project-data" id="project-library-data">
+                    <div class="row project-data" id="project-library-data" hidden>
                       <div class="col3"></div>
                       <div class="col-7-">
                         <h1 class="display-5" id="javalib"> Java library program </h1>
@@ -495,7 +493,7 @@
                     <div id="project-dscience-btn" class="project-headline">
                       <a class="myproject-a">Data science in python</a>
                     </div>
-                    <div class="row project-data" id="project-dscience-data">
+                    <div class="row project-data" id="project-dscience-data" hidden>
                       <div class="col3"></div>
                       <div class="col-7">
                         <h1 class="display-5" id="datascience"> Data science in python </h1>
