--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <title>Derrick Shibero Wakhu Portfolio</title>
   <link rel="stylesheet" href="css/styles.css" />
   <style>
-    
+    .project-headline{
+      background-color: rgb(65, 105, 225);
+    }
   </style>
 </head>
 <body>
