--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/styles.css" />
   <style>
     .project-headline{
-      background-color: rgb(100, 149, 237);
+      background-color: rgba(100, 149, 237, .5);
     }
   </style>
 </head>
