--- a/index.html
+++ b/index.html
@@ -573,6 +573,18 @@
     </div>
   <script src="js/script.js"></script>
   <!-- jQuery code-->
+  <script>
+    $(document).ready(function(){
+      $("#project-portfolio-btn").click(function(){
+        $("#project-portfolio-data").slideToggle();
+        if($("#project-portfolio-data").is(":hidden")){
+            
+        }else{
+            $("#project-portfolio-data").css("background-color", "yellow");
+        }
+    })
+    })
+  </script>
   
 </body>
 </html>
