--- a/index.html
+++ b/index.html
@@ -575,16 +575,33 @@
   <!-- jQuery code-->
   <script>
     $(document).ready(function(){
-      $("#project-portfolio-btn").click(function(){
-        $("#project-portfolio-data").slideToggle();
-        if($("#project-portfolio-data").is(":hidden")){
-          $("#project-portfolio-btn").css("background-color", "background-color: rgba(100, 149, 237, .5)");
+    //   $("#project-portfolio-btn").click(function(){
+    //     $("#project-portfolio-data").slideToggle();
+    //     if($("#project-portfolio-data").is(":hidden")){
+    //       $("#project-portfolio-btn").css("background-color", "background-color: rgba(100, 149, 237, .5)");
+    //     }else{
+    //       $("#project-portfolio-data").css("background-color", "rgba(228, 208, 10, .5)");
+    //       $("#project-portfolio-btn").css("background-color", "background-color: rgba(0, 255, 0, .5)");
+    //     }
+    // })
+      $().click(function(){})
+      $().click(function(){})
+      $().click(function(){})
+      $().click(function(){})
+      $().click(function(){})  
+      $().click(function(){})
+      $().click(function(){})
+      $("#project-dscience-btn").click(function(){
+        $("#project-dscience-data").slideToggle();
+        if($("#project-dscience-data").is(":hidden")){
+          $("#project-dscience-btn").css("background-color", "rgba(100, 149, 237, .5)");
         }else{
-          $("#project-portfolio-data").css("background-color", "rgba(228, 208, 10, .5)");
-          $("#project-portfolio-btn").css("background-color", "background-color: rgba(0, 255, 0, .5)");
+          $("#project-dscience-data").css("background-color", "rgba(228, 208, 10, .5)");
+          $("#project-dscience-btn").css("background-color", "background-color: rgba(0, 255, 0, .5)");
         }
+      })
     })
-    })
+    
   </script>
   
 </body>
