--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     .project-headline{
       background-color: rgba(100, 149, 237, .5);
     }
+    .project-outer-container: hover{
+      margin: 8px;
+      width: 80%;
+    }
   </style>
 </head>
 <body>
