--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     .project-headline{
       background-color: rgba(100, 149, 237, .5);
     }
-    .project-outer-container: hover{
+    .project-outer-container{
       margin: 8px;
+    }
+    .project-outer-container: hover{
       width: 80%;
     }
   </style>
