--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     }
     .project-outer-container{
       margin: 8px;
+      width: 50%;
     }
     .project-outer-container: hover{
       width: 80%;
