--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       margin: 8px;
       width: 50%;
     }
-    .project-outer-container: hover{
+    .project-headline: hover{
       width: 80%;
     }
   </style>
